limpieza de codigo y agregando configuracion

--- a/src/public/css/loginAndRegister.css
+++ b/src/public/css/loginAndRegister.css
@@ -38,6 +38,7 @@
 }
 
 #box-form {
+  width: 40%;
   margin: 10px;
   background: white;
   box-shadow: 0px 0px 1px #47361A, 0px 3px 7px #47361A,
@@ -59,6 +60,9 @@ select {
 
 .box-register input[type="file"] {
   font-size: 11px;
+}
+.box-button{
+  text-align: center;
 }
 
 .box-button button[type="submit"],
