--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,10 +20,9 @@
                         </div>
 
                 </section>
-
                 <!--Inicio articulos-->
+                <h2 class="title-index">Nuestros Productos</h2>
                 <section id="articles">
-                    <h2>Nuestros Productos</h2>
                     <div id="container-products">
                         <div class="box-product">
                             <div class="box-img">
@@ -79,15 +78,60 @@
                                     una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
                                     arriesgados que disfrutan de sabores intensos.</p>
                             </div>
+                            
                         </div>
+                        <div id="container-products">
+                            <div class="box-product">
+                                <div class="box-img">
+                                    <img src="/img/arrabalera.jpeg" alt="">
+                                </div>
+                                <div class="box-details">
+                                    <p class="name-product"> <a href="/product/details/2">Arrabalera</a></p>
+                                    <p class="price-product">$ 4000</p>
+                                    <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
+                                        cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
+                                        una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
+                                        arriesgados que disfrutan de sabores intensos.</p>
+                                </div>
+                            </div>
+    
+                            <div class="box-product">
+                                <div class="box-img">
+                                    <img src="/img/arrabalera.jpeg" alt="">
+                                </div>
+                                <div class="box-details">
+                                    <p class="name-product"> <a href="#">Arrabalera</a></p>
+                                    <p class="price-product">$ 4000</p>
+                                    <div class="descrption-product1">
+                                        <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
+                                            cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
+                                            una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
+                                            arriesgados que disfrutan de sabores intensos.</p>
+                                    </div>
+                                </div>
+                            </div>
+    
+                            <div class="box-product">
+                                <div class="box-img">
+                                    <img src="/img/arrabalera.jpeg" alt="">
+                                </div>
+                                <div class="box-details">
+                                    <p class="name-product"> <a href="#">Arrabalera</a></p>
+                                    <p class="price-product">$ 4000</p>
+                                    <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
+                                        cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
+                                        una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
+                                        arriesgados que disfrutan de sabores intensos.</p>
+                                </div>
+                            </div>
 
-
+                        </div>
                 </section>
                 <!--Fin articulos-->
                 
                 <!--Inicio barra lateral-->
                 
-                <aside id="lateral">
+                <!-- <aside id="lateral">
                     <% if (locals.isLogged) { %>
 
                         <h3>hola</h3>
@@ -134,8 +178,8 @@
                         </div>
                     </div>
 
-                </aside>
-                <!--fIN DE barra lateral-->
+                </aside> -->
+                <!-- fIN DE barra lateral -->
 
 
             </section>
