--- a/src/public/css/loginAndRegister.css
+++ b/src/public/css/loginAndRegister.css
@@ -101,3 +101,7 @@ div .error-validation{
   color: rgb(0, 153, 255);
   color: 2px solid rgb(0, 153, 255);
 }
+
+.error-message {
+  color:rgba(255, 0, 0, 0.514);
+}
