--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -26,17 +26,14 @@
             </li>
 
             <li class="menu_item menu_item--show">
-                <a href="#" class="menu_link">Tips y Más<img src="/img/svg/arrow.svg" class="menu_arrow"></a>
+                <a href="#" class="menu_link">Panel usuario<img src="/img/svg/arrow.svg" class="menu_arrow"></a>
 
                 <ul class="menu_nesting">
                     <li class="menu_inside">
-                        <a href="" class="menu_link menu_link--inside ">Projects 1</a>
+                        <a href="" class="menu_link menu_link--inside ">Iniciar sesion</a>
                     </li>
                     <li class="menu_inside">
-                        <a href="" class="menu_link menu_link--inside ">Projects 2</a>
-                    </li>
-                    <li class="menu_inside">
-                        <a href="" class="menu_link menu_link--inside ">Projects 3</a>
+                        <a href="/user/create" class="menu_link menu_link--inside ">Registrarte</a>
                     </li>
                 </ul>
             </li>
