--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -30,7 +30,7 @@
 
                 <ul class="menu_nesting">
                     <li class="menu_inside">
-                        <a href="" class="menu_link menu_link--inside ">Iniciar sesion</a>
+                        <a href="/user/login" class="menu_link menu_link--inside ">Iniciar sesion</a>
                     </li>
                     <li class="menu_inside">
                         <a href="/user/create" class="menu_link menu_link--inside ">Registrarte</a>
