--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer id="footer">
-    <div class="wrap">
+    <div class="wrap footer_wrap">
 
         <div id="menu_footer">
             <h5>MENÚ</h5>
