--- a/src/views/userProfile.ejs
+++ b/src/views/userProfile.ejs
@@ -12,12 +12,12 @@
             <section class="wrap wrap-content wrap-banner profile-user">
 
                 <div id="container-profile">
-                    <h2 class="title">Bienvenido Usuario</h2>
+                    <h2 class="title">Bienvenido <%= user.name %></h2>
                     <img class="img-profile" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png"
                         alt="Foto de perfil">
                     <div class="panel-profile">
                         <p class="rol">Rol: Admin</p>
-                        <p class="country">Pais: Colombia</p>
+                        <p class="country">Pais: <%= user.country %></p>
                     </div>
                     <div class="button-profile">
                         <button >Editar perfil</button>
