--- a/src/views/beer.ejs
+++ b/src/views/beer.ejs
@@ -18,7 +18,7 @@
 
                     <div id="contenedor">
                         <div>
-                            <img src="/img/imageUsers/<%=productId.image %>" alt="" class="profile-imagen">
+                            <img src="/img/products/<%=productId.image %>" alt="" class="profile-imagen">
                         </div>
 
                         <div>
@@ -46,14 +46,6 @@
 
                     </div>
                 </section>
-
-                <div class="profile-otras">
-                    <img src="/img/asopalada.jpeg" class="profile-otras-cervezas">
-                    <img src="/img/melosa.jpeg" class="profile-otras-cervezas">
-                    <img src="/img/salamera.jpeg" class="profile-otras-cervezas">
-                    <img src="/img/calentona.jpeg" class="profile-otras-cervezas">
-                    <img src="/img/todera.jpeg" class="profile-otras-cervezas">
-                </div>
             </section>
             <!--Inicio Footer-->
             <div class="clearfix"></div>
