--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('partials/head.ejs', {title: 'Inicio'}) %>
+<%- include('partials/head.ejs', {title: 'Inicio' }) %>
 
 
     <body>
@@ -78,58 +78,75 @@
                                     una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
                                     arriesgados que disfrutan de sabores intensos.</p>
                             </div>
-                            
-                        </div>
-                        <div id="container-products">
-                            <div class="box-product">
-                                <div class="box-img">
-                                    <img src="/img/arrabalera.jpeg" alt="">
-                                </div>
-                                <div class="box-details">
-                                    <p class="name-product"> <a href="/product/details/2">Arrabalera</a></p>
-                                    <p class="price-product">$ 4000</p>
-                                    <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
-                                        cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
-                                        una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
-                                        arriesgados que disfrutan de sabores intensos.</p>
-                                </div>
-                            </div>
-    
-                            <div class="box-product">
-                                <div class="box-img">
-                                    <img src="/img/arrabalera.jpeg" alt="">
-                                </div>
-                                <div class="box-details">
-                                    <p class="name-product"> <a href="#">Arrabalera</a></p>
-                                    <p class="price-product">$ 4000</p>
-                                    <div class="descrption-product1">
-                                        <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
-                                            cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
-                                            una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
-                                            arriesgados que disfrutan de sabores intensos.</p>
-                                    </div>
-                                </div>
-                            </div>
-    
-                            <div class="box-product">
-                                <div class="box-img">
-                                    <img src="/img/arrabalera.jpeg" alt="">
-                                </div>
-                                <div class="box-details">
-                                    <p class="name-product"> <a href="#">Arrabalera</a></p>
-                                    <p class="price-product">$ 4000</p>
-                                    <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
-                                        cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
-                                        una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
-                                        arriesgados que disfrutan de sabores intensos.</p>
-                                </div>
-                            </div>
 
                         </div>
+                    </div>
+                    <div id="container-products">
+                        <div class="box-product">
+                            <div class="box-img">
+                                <img src="/img/arrabalera.jpeg" alt="">
+                            </div>
+                            <div class="box-details">
+                                <p class="name-product"> <a href="/product/details/2">Arrabalera</a></p>
+                                <p class="price-product">$ 4000</p>
+                                <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
+                                    cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
+                                    una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
+                                    arriesgados que disfrutan de sabores intensos.</p>
+                            </div>
+                        </div>
+
+                        <div class="box-product">
+                            <div class="box-img">
+                                <img src="/img/arrabalera.jpeg" alt="">
+                            </div>
+                            <div class="box-details">
+                                <p class="name-product"> <a href="#">Arrabalera</a></p>
+                                <p class="price-product">$ 4000</p>
+                                <div class="descrption-product1">
+                                    <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
+                                        cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca,
+                                        con
+                                        una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los
+                                        mas
+                                        arriesgados que disfrutan de sabores intensos.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="box-product">
+                            <div class="box-img">
+                                <img src="/img/arrabalera.jpeg" alt="">
+                            </div>
+                            <div class="box-details">
+                                <p class="name-product"> <a href="#">Arrabalera</a></p>
+                                <p class="price-product">$ 4000</p>
+                                <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
+                                    cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
+                                    una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
+                                    arriesgados que disfrutan de sabores intensos.</p>
+                            </div>
+                        </div>
+
+                        <div class="box-product">
+                            <div class="box-img">
+                                <img src="/img/arrabalera.jpeg" alt="">
+                            </div>
+                            <div class="box-details">
+                                <p class="name-product"> <a href="#">Arrabalera</a></p>
+                                <p class="price-product">$ 4000</p>
+                                <p class="descrption-product">Ale refrescante y de especiada con fuertes notas a
+                                    cítricos de color naranja oscuro, altamente carbonatada, bien lupulada y seca, con
+                                    una acidez mitigadora de la sed, con 5.3% aprox de alcohol, una cerveza para los mas
+                                    arriesgados que disfrutan de sabores intensos.</p>
+                            </div>
+                        </div>
+
+                    </div>
                 </section>
                 <!--Fin articulos-->
-                
-            
+
+
 
 
             </section>
@@ -141,7 +158,7 @@
 
 
                 <!--Script-->
-            <script src="/js/navScript.js"></script>
+                <script src="/js/navScript.js"></script>
     </body>
 
 
