--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -15,7 +15,7 @@
                         <a href="/product/details/<%=product.id%>">
                             <div id="box-profile-product">
                                 <div class="profile-product">
-                                  <img src="/img/imageUsers/<%=product.image %>" alt="">  
+                                  <img src="/img/products/<%=product.image %>" alt="">  
                                 </div>
     
                                 <div class="profile-product">
