--- a/src/public/css/loginAndRegister.css
+++ b/src/public/css/loginAndRegister.css
@@ -26,7 +26,11 @@
 
 
 /*Generalres*/
-
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 /*REGISTER*/
 
@@ -38,7 +42,7 @@
 }
 
 #box-form {
-  width: 40%;
+  width: 30%;
   margin: 10px;
   background: white;
   box-shadow: 0px 0px 1px #47361A, 0px 3px 7px #47361A,
