--- a/src/views/beer.ejs
+++ b/src/views/beer.ejs
@@ -18,7 +18,7 @@
 
                     <div id="contenedor">
                         <div>
-                            <img src="/img/products/<%=productId.image %>" alt="" class="profile-imagen">
+                            <img src="/img/products/<%=productId.image %>" alt="" class="profile-imagen zoom-image">
                         </div>
 
                         <div>
@@ -37,10 +37,10 @@
                     </div>
                     <div class="profile-button">
                         <a href="/product/edit/<%= productId.id %>">
-                            <button>Editar Producto</button>
+                            <button class="zoom-button">Editar Producto</button>
                         </a>
                         <form action="/product/delete/<%= productId.id %>?_method=DELETE" method="POST">
-                            <button type="submit">Eliminar</button>
+                            <button class="zoom-button" type="submit">Eliminar</button>
                         </form>
                     </div>
 
